--- a/package.json
+++ b/package.json
@@ -11,6 +11,12 @@
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
+  "devDependencies": {
+    "sass-loader": "^13.2.0",
+    "css-loader": "^6.7.3",
+    "style-loader": "^3.3.1",
+    "sass": "^1.58.3"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
